CIEN Gain: $ 6.52 Win %: 68.00 in 19 days with algo TB3_HL_LO_QM_OB1_OS1_CB5_CS5
CIEN Gain: $ -5.3 Win %: 47.00 in 19 days with algo TB3_HL_LO_QM_OB1_OS1_CB5_CS5_TR_QP_DB10
CIEN Gain: $ -5.97 Win %: 42.00 in 19 days with algo TB3_HL_LO_QM_OB1_OS1_CB5_CS5_RV_TR_DB10
CIEN Gain: $ -3.52 Win %: 47.00 in 19 days with algo TB3_HL_LO_QM_OB1_OS1_CB5_CS5_RV_AV_DB10
CIEN Gain: $ -5.09 Win %: 36.00 in 19 days with algo TB3_HL_LO_QM_OB1_OS1_CB5_CS5_RV_AL_DB10
CIEN Gain: $ -9.37 Win %: 31.00 in 19 days with algo TB3_HL_LO_QM_OB1_OS1_CB5_CS5_RV_QP_DB10
CIEN Gain: $ -4.47 Win %: 42.00 in 19 days with algo TB3_HL_LO_QM_OB1_OS1_CB5_CS5_HM_TR_DB10
CIEN Gain: $ -2.98 Win %: 52.00 in 19 days with algo TB3_HL_LO_QM_OB1_OS1_CB5_CS5_HM_AV_DB10
CIEN Gain: $ -11.45 Win %: 36.00 in 19 days with algo TB3_HL_LO_QM_OB1_OS1_CB5_CS5_HM_QP_DB10
CIEN Gain: $ -3.03 Win %: 47.00 in 19 days with algo TB3_HL_LO_QM_OB1_OS1_CB5_CS5_IT_QL_DB10
CIEN Gain: $ -3.57 Win %: 52.00 in 19 days with algo TB3_HL_LO_QM_OB1_OS1_CB5_CS5_IT_QP_DB10
CIEN Gain: $ 4.36 Win %: 63.00 in 19 days with algo TB3_HL_LO_QM_OB1_OS1_CB5_CS5_TR_IR3
CIEN Gain: $ 6.24 Win %: 68.00 in 19 days with algo TB3_HL_LO_QM_OB1_OS1_CB5_CS5_TR_TS
CIEN Gain: $ -2.14 Win %: 52.00 in 19 days with algo TB3_HL_LO_QM_OB1_OS1_CB5_CS5_TR_QP
CIEN Gain: $ -1.16 Win %: 52.00 in 19 days with algo TB3_HL_LO_QM_OB1_OS1_CB5_CS5_QP_IR3
CIEN Gain: $ -5.79 Win %: 36.00 in 19 days with algo TB3_HL_LO_QM_OB1_OS1_CB5_CS5_RV_TR
CIEN Gain: $ 4.08 Win %: 57.00 in 19 days with algo TB3_HL_LO_QM_OB1_OS1_CB5_CS5_RV_AV
CIEN Gain: $ -0.95 Win %: 47.00 in 19 days with algo TB3_HL_LO_QM_OB1_OS1_CB5_CS5_RV_AL
CIEN Gain: $ -10.89 Win %: 36.00 in 19 days with algo TB3_HL_LO_QM_OB1_OS1_CB5_CS5_RV_QP
CIEN Gain: $ -3.91 Win %: 57.00 in 19 days with algo TB3_HL_LO_QM_OB1_OS1_CB5_CS5_HM_TR
CIEN Gain: $ 0.03 Win %: 52.00 in 19 days with algo TB3_HL_LO_QM_OB1_OS1_CB5_CS5_HM_AV
CIEN Gain: $ -1.03 Win %: 52.00 in 19 days with algo TB3_HL_LO_QM_OB1_OS1_CB5_CS5_HM_AL
CIEN Gain: $ -8.88 Win %: 42.00 in 19 days with algo TB3_HL_LO_QM_OB1_OS1_CB5_CS5_HM_QP
CIEN Gain: $ 3.15 Win %: 63.00 in 19 days with algo TB3_HL_LO_QM_OB1_OS1_CB5_CS5_IT_QL
CIEN Gain: $ -1.43 Win %: 52.00 in 19 days with algo TB3_HL_LO_QM_OB1_OS1_CB5_CS5_IT_QP
CIEN Gain: $ 1.53 Win %: 63.00 in 19 days with algo TB3_HL_LO_QM_OB1_OS1_CB5_CS5_IT_TS
CIEN Gain: $ -36.5 Win %: 26.00 in 19 days with algo TB3_HL_LO_QM_OB1_OS1_CB5_CS5_AO_AC
CIEN Gain: $ 0.35 Win %: 84.00 in 19 days with algo TB3_HL_LO_QM_OB1_OS1_CB5_CS5_QP_PM
CIEN Gain: $ 3.08 Win %: 57.00 in 19 days with algo TB3_HL_LO_QM_OB1_OS1_CB5_CS5_AV_TS
CIEN Gain: $ 4.82 Win %: 63.00 in 19 days with algo TB3_HL_LO_QM_OB1_OS1_CB5_CS5_AL_TS
CIEN Gain: $ -2.61 Win %: 42.00 in 19 days with algo TB3_HL_LO_QM_OB1_OS1_CB5_CS5_RV
CIEN Gain: $ 7.54 Win %: 68.00 in 19 days with algo TB3_HL_LO_QM_OB1_OS1_CB5_CS5_IR3
CIEN Gain: $ 6.35 Win %: 68.00 in 19 days with algo TB3_HL_LO_QM_OB1_OS1_CB5_CS5_TR
CIEN Gain: $ 2.88 Win %: 52.00 in 19 days with algo TB3_HL_LO_QM_OB1_OS1_CB5_CS5_AV
CIEN Gain: $ 7.13 Win %: 63.00 in 19 days with algo TB3_HL_LO_QM_OB1_OS1_CB5_CS5_AL
CIEN Gain: $ -0.45 Win %: 57.00 in 19 days with algo TB3_HL_LO_QM_OB1_OS1_CB5_CS5_VI
CIEN Gain: $ 4.35 Win %: 57.00 in 19 days with algo TB3_HL_LO_QM_OB1_OS1_CB5_CS5_LI
CIEN Gain: $ -1.43 Win %: 52.00 in 19 days with algo TB3_HL_LO_QM_OB1_OS1_CB5_CS5_QP
CIEN Gain: $ 0.36 Win %: 63.00 in 19 days with algo TB3_HL_LO_QM_OB1_OS1_CB5_CS5_HM
CIEN Gain: $ 6.9 Win %: 68.00 in 19 days with algo TB3_HL_LO_QM_OB1_OS1_CB5_CS5_SS
CIEN Gain: $ 3.73 Win %: 63.00 in 19 days with algo TB3_HL_LO_QM_OB1_OS1_CB5_CS5_QL
CIEN Gain: $ 1.54 Win %: 57.00 in 19 days with algo TB3_HL_LO_QM_OB1_OS1_CB5_CS5_DB10
CIEN Gain: $ 6.6 Win %: 63.00 in 19 days with algo TB3_HL_LO_QM_OB1_OS1_CB5_CS5_AO
CIEN Gain: $ -19.34 Win %: 42.00 in 19 days with algo TB3_HL_LO_QM_OB1_OS1_CB5_CS5_AC
CIEN Gain: $ 5.32 Win %: 63.00 in 19 days with algo TB3_HL_LO_QM_OB1_OS1_CB5_CS5_IT
CIEN Gain: $ 5.37 Win %: 84.00 in 19 days with algo TB3_HL_LO_QM_OB1_OS1_CB5_CS5_PM
CIEN Gain: $ 6.41 Win %: 68.00 in 19 days with algo TB3_HL_LO_QM_OB1_OS1_CB5_CS5_TS
CIEN Gain: $ -5.3 Win %: 47.00 in 19 days with algo TB3_HL_LO_QM_OB2_OS2_CB5_CS5_TR_QP_DB10
CIEN Gain: $ -5.97 Win %: 42.00 in 19 days with algo TB3_HL_LO_QM_OB2_OS2_CB5_CS5_RV_TR_DB10
CIEN Gain: $ -1.71 Win %: 52.00 in 19 days with algo TB3_HL_LO_QM_OB2_OS2_CB5_CS5_RV_AV_DB10
CIEN Gain: $ -5.09 Win %: 36.00 in 19 days with algo TB3_HL_LO_QM_OB2_OS2_CB5_CS5_RV_AL_DB10
CIEN Gain: $ -9.37 Win %: 31.00 in 19 days with algo TB3_HL_LO_QM_OB2_OS2_CB5_CS5_RV_QP_DB10
CIEN Gain: $ -4.47 Win %: 42.00 in 19 days with algo TB3_HL_LO_QM_OB2_OS2_CB5_CS5_HM_TR_DB10
CIEN Gain: $ -2.98 Win %: 52.00 in 19 days with algo TB3_HL_LO_QM_OB2_OS2_CB5_CS5_HM_AV_DB10
CIEN Gain: $ -9.92 Win %: 42.00 in 19 days with algo TB3_HL_LO_QM_OB2_OS2_CB5_CS5_HM_QP_DB10
CIEN Gain: $ -3.03 Win %: 47.00 in 19 days with algo TB3_HL_LO_QM_OB2_OS2_CB5_CS5_IT_QL_DB10
CIEN Gain: $ -3.57 Win %: 52.00 in 19 days with algo TB3_HL_LO_QM_OB2_OS2_CB5_CS5_IT_QP_DB10
CIEN Gain: $ 7.37 Win %: 68.00 in 19 days with algo TB3_HL_LO_QM_OB2_OS2_CB5_CS5_TR_IR3
CIEN Gain: $ 6.24 Win %: 68.00 in 19 days with algo TB3_HL_LO_QM_OB2_OS2_CB5_CS5_TR_TS
CIEN Gain: $ -2.14 Win %: 52.00 in 19 days with algo TB3_HL_LO_QM_OB2_OS2_CB5_CS5_TR_QP
CIEN Gain: $ 0.21 Win %: 57.00 in 19 days with algo TB3_HL_LO_QM_OB2_OS2_CB5_CS5_QP_IR3
CIEN Gain: $ -4.72 Win %: 42.00 in 19 days with algo TB3_HL_LO_QM_OB2_OS2_CB5_CS5_RV_TR
CIEN Gain: $ 4.08 Win %: 57.00 in 19 days with algo TB3_HL_LO_QM_OB2_OS2_CB5_CS5_RV_AV
CIEN Gain: $ -0.95 Win %: 47.00 in 19 days with algo TB3_HL_LO_QM_OB2_OS2_CB5_CS5_RV_AL
CIEN Gain: $ -10.89 Win %: 36.00 in 19 days with algo TB3_HL_LO_QM_OB2_OS2_CB5_CS5_RV_QP
CIEN Gain: $ -3.91 Win %: 57.00 in 19 days with algo TB3_HL_LO_QM_OB2_OS2_CB5_CS5_HM_TR
CIEN Gain: $ 0.03 Win %: 52.00 in 19 days with algo TB3_HL_LO_QM_OB2_OS2_CB5_CS5_HM_AV
CIEN Gain: $ -1.03 Win %: 52.00 in 19 days with algo TB3_HL_LO_QM_OB2_OS2_CB5_CS5_HM_AL
CIEN Gain: $ -8.88 Win %: 42.00 in 19 days with algo TB3_HL_LO_QM_OB2_OS2_CB5_CS5_HM_QP
CIEN Gain: $ 3.15 Win %: 63.00 in 19 days with algo TB3_HL_LO_QM_OB2_OS2_CB5_CS5_IT_QL
CIEN Gain: $ -0.66 Win %: 52.00 in 19 days with algo TB3_HL_LO_QM_OB2_OS2_CB5_CS5_IT_QP
CIEN Gain: $ 6.16 Win %: 68.00 in 19 days with algo TB3_HL_LO_QM_OB2_OS2_CB5_CS5_IT_TS
CIEN Gain: $ -36.5 Win %: 26.00 in 19 days with algo TB3_HL_LO_QM_OB2_OS2_CB5_CS5_AO_AC
CIEN Gain: $ 0.35 Win %: 84.00 in 19 days with algo TB3_HL_LO_QM_OB2_OS2_CB5_CS5_QP_PM
CIEN Gain: $ 3.08 Win %: 57.00 in 19 days with algo TB3_HL_LO_QM_OB2_OS2_CB5_CS5_AV_TS
CIEN Gain: $ 4.82 Win %: 63.00 in 19 days with algo TB3_HL_LO_QM_OB2_OS2_CB5_CS5_AL_TS
CIEN Gain: $ -3.33 Win %: 36.00 in 19 days with algo TB3_HL_LO_QM_OB2_OS2_CB5_CS5_RV
CIEN Gain: $ 7.54 Win %: 68.00 in 19 days with algo TB3_HL_LO_QM_OB2_OS2_CB5_CS5_IR3
CIEN Gain: $ 6.35 Win %: 68.00 in 19 days with algo TB3_HL_LO_QM_OB2_OS2_CB5_CS5_TR
CIEN Gain: $ 2.88 Win %: 52.00 in 19 days with algo TB3_HL_LO_QM_OB2_OS2_CB5_CS5_AV
CIEN Gain: $ 7.13 Win %: 63.00 in 19 days with algo TB3_HL_LO_QM_OB2_OS2_CB5_CS5_AL
CIEN Gain: $ -0.45 Win %: 57.00 in 19 days with algo TB3_HL_LO_QM_OB2_OS2_CB5_CS5_VI
CIEN Gain: $ 4.35 Win %: 57.00 in 19 days with algo TB3_HL_LO_QM_OB2_OS2_CB5_CS5_LI
CIEN Gain: $ -1.43 Win %: 52.00 in 19 days with algo TB3_HL_LO_QM_OB2_OS2_CB5_CS5_QP
CIEN Gain: $ 0.36 Win %: 63.00 in 19 days with algo TB3_HL_LO_QM_OB2_OS2_CB5_CS5_HM
CIEN Gain: $ 6.9 Win %: 68.00 in 19 days with algo TB3_HL_LO_QM_OB2_OS2_CB5_CS5_SS
CIEN Gain: $ 3.73 Win %: 63.00 in 19 days with algo TB3_HL_LO_QM_OB2_OS2_CB5_CS5_QL
CIEN Gain: $ 1.54 Win %: 57.00 in 19 days with algo TB3_HL_LO_QM_OB2_OS2_CB5_CS5_DB10
CIEN Gain: $ 4.12 Win %: 57.00 in 19 days with algo TB3_HL_LO_QM_OB2_OS2_CB5_CS5_AO
CIEN Gain: $ -19.34 Win %: 42.00 in 19 days with algo TB3_HL_LO_QM_OB2_OS2_CB5_CS5_AC
CIEN Gain: $ 5.94 Win %: 68.00 in 19 days with algo TB3_HL_LO_QM_OB2_OS2_CB5_CS5_IT
CIEN Gain: $ 5.37 Win %: 84.00 in 19 days with algo TB3_HL_LO_QM_OB2_OS2_CB5_CS5_PM
CIEN Gain: $ 6.41 Win %: 68.00 in 19 days with algo TB3_HL_LO_QM_OB2_OS2_CB5_CS5_TS
CIEN Gain: $ -1.89 Win %: 47.00 in 19 days with algo TB3_HL_LO_QM_OB3_OS3_CB5_CS5_TR_QP_DB10
CIEN Gain: $ -5.95 Win %: 57.00 in 19 days with algo TB3_HL_LO_QM_OB3_OS3_CB5_CS5_RV_TR_DB10
CIEN Gain: $ -2.65 Win %: 57.00 in 19 days with algo TB3_HL_LO_QM_OB3_OS3_CB5_CS5_RV_AV_DB10
CIEN Gain: $ -4.92 Win %: 47.00 in 19 days with algo TB3_HL_LO_QM_OB3_OS3_CB5_CS5_RV_AL_DB10
CIEN Gain: $ -4.42 Win %: 36.00 in 19 days with algo TB3_HL_LO_QM_OB3_OS3_CB5_CS5_RV_QP_DB10
CIEN Gain: $ -5.9 Win %: 42.00 in 19 days with algo TB3_HL_LO_QM_OB3_OS3_CB5_CS5_HM_TR_DB10
CIEN Gain: $ 1.82 Win %: 63.00 in 19 days with algo TB3_HL_LO_QM_OB3_OS3_CB5_CS5_HM_AV_DB10
CIEN Gain: $ -4.62 Win %: 36.00 in 19 days with algo TB3_HL_LO_QM_OB3_OS3_CB5_CS5_HM_QP_DB10
CIEN Gain: $ -5.07 Win %: 47.00 in 19 days with algo TB3_HL_LO_QM_OB3_OS3_CB5_CS5_IT_QL_DB10
CIEN Gain: $ -3.37 Win %: 47.00 in 19 days with algo TB3_HL_LO_QM_OB3_OS3_CB5_CS5_IT_QP_DB10
CIEN Gain: $ 4.39 Win %: 63.00 in 19 days with algo TB3_HL_LO_QM_OB3_OS3_CB5_CS5_TR_IR3
CIEN Gain: $ 4.92 Win %: 68.00 in 19 days with algo TB3_HL_LO_QM_OB3_OS3_CB5_CS5_TR_TS
CIEN Gain: $ 1.41 Win %: 63.00 in 19 days with algo TB3_HL_LO_QM_OB3_OS3_CB5_CS5_TR_QP
CIEN Gain: $ -0.77 Win %: 52.00 in 19 days with algo TB3_HL_LO_QM_OB3_OS3_CB5_CS5_QP_IR3
CIEN Gain: $ -2.22 Win %: 47.00 in 19 days with algo TB3_HL_LO_QM_OB3_OS3_CB5_CS5_RV_TR
CIEN Gain: $ 2.26 Win %: 57.00 in 19 days with algo TB3_HL_LO_QM_OB3_OS3_CB5_CS5_RV_AV
CIEN Gain: $ -1.4 Win %: 52.00 in 19 days with algo TB3_HL_LO_QM_OB3_OS3_CB5_CS5_RV_AL
CIEN Gain: $ -5.57 Win %: 26.00 in 19 days with algo TB3_HL_LO_QM_OB3_OS3_CB5_CS5_RV_QP
CIEN Gain: $ -2.04 Win %: 57.00 in 19 days with algo TB3_HL_LO_QM_OB3_OS3_CB5_CS5_HM_TR
CIEN Gain: $ 4.71 Win %: 57.00 in 19 days with algo TB3_HL_LO_QM_OB3_OS3_CB5_CS5_HM_AV
CIEN Gain: $ 4.09 Win %: 63.00 in 19 days with algo TB3_HL_LO_QM_OB3_OS3_CB5_CS5_HM_AL
CIEN Gain: $ -4.19 Win %: 31.00 in 19 days with algo TB3_HL_LO_QM_OB3_OS3_CB5_CS5_HM_QP
CIEN Gain: $ -0.72 Win %: 57.00 in 19 days with algo TB3_HL_LO_QM_OB3_OS3_CB5_CS5_IT_QL
CIEN Gain: $ -1.68 Win %: 52.00 in 19 days with algo TB3_HL_LO_QM_OB3_OS3_CB5_CS5_IT_QP
CIEN Gain: $ 2.68 Win %: 63.00 in 19 days with algo TB3_HL_LO_QM_OB3_OS3_CB5_CS5_IT_TS
CIEN Gain: $ -38.78 Win %: 26.00 in 19 days with algo TB3_HL_LO_QM_OB3_OS3_CB5_CS5_AO_AC
CIEN Gain: $ -4.57 Win %: 84.00 in 19 days with algo TB3_HL_LO_QM_OB3_OS3_CB5_CS5_QP_PM
CIEN Gain: $ -1.72 Win %: 52.00 in 19 days with algo TB3_HL_LO_QM_OB3_OS3_CB5_CS5_AV_TS
CIEN Gain: $ 3.5 Win %: 63.00 in 19 days with algo TB3_HL_LO_QM_OB3_OS3_CB5_CS5_AL_TS
CIEN Gain: $ -1.4 Win %: 42.00 in 19 days with algo TB3_HL_LO_QM_OB3_OS3_CB5_CS5_RV
CIEN Gain: $ 4.56 Win %: 63.00 in 19 days with algo TB3_HL_LO_QM_OB3_OS3_CB5_CS5_IR3
CIEN Gain: $ 4.64 Win %: 68.00 in 19 days with algo TB3_HL_LO_QM_OB3_OS3_CB5_CS5_TR
CIEN Gain: $ 1.0 Win %: 52.00 in 19 days with algo TB3_HL_LO_QM_OB3_OS3_CB5_CS5_AV
CIEN Gain: $ 5.38 Win %: 63.00 in 19 days with algo TB3_HL_LO_QM_OB3_OS3_CB5_CS5_AL
CIEN Gain: $ 0.92 Win %: 42.00 in 19 days with algo TB3_HL_LO_QM_OB3_OS3_CB5_CS5_VI
CIEN Gain: $ 3.78 Win %: 68.00 in 19 days with algo TB3_HL_LO_QM_OB3_OS3_CB5_CS5_LI
CIEN Gain: $ -1.68 Win %: 52.00 in 19 days with algo TB3_HL_LO_QM_OB3_OS3_CB5_CS5_QP
CIEN Gain: $ 3.17 Win %: 63.00 in 19 days with algo TB3_HL_LO_QM_OB3_OS3_CB5_CS5_HM
CIEN Gain: $ 4.82 Win %: 68.00 in 19 days with algo TB3_HL_LO_QM_OB3_OS3_CB5_CS5_SS
CIEN Gain: $ 2.02 Win %: 63.00 in 19 days with algo TB3_HL_LO_QM_OB3_OS3_CB5_CS5_QL
CIEN Gain: $ 0.01 Win %: 57.00 in 19 days with algo TB3_HL_LO_QM_OB3_OS3_CB5_CS5_DB10
CIEN Gain: $ 8.38 Win %: 73.00 in 19 days with algo TB3_HL_LO_QM_OB3_OS3_CB5_CS5_AO
CIEN Gain: $ 2.72 Win %: 47.00 in 19 days with algo TB3_HL_LO_QM_OB3_OS3_CB5_CS5_AC
CIEN Gain: $ 2.07 Win %: 63.00 in 19 days with algo TB3_HL_LO_QM_OB3_OS3_CB5_CS5_IT
CIEN Gain: $ 4.39 Win %: 89.00 in 19 days with algo TB3_HL_LO_QM_OB3_OS3_CB5_CS5_PM
CIEN Gain: $ 5.09 Win %: 68.00 in 19 days with algo TB3_HL_LO_QM_OB3_OS3_CB5_CS5_TS
CIEN Gain: $ -11.02 Win %: 31.00 in 19 days with algo TB1_OC_QM_OB2_OS2_CB5_CS5_TR_QP_DB30
CIEN Gain: $ -6.66 Win %: 47.00 in 19 days with algo TB1_OC_QM_OB2_OS2_CB5_CS5_RV_TR_DB30
CIEN Gain: $ 0.48 Win %: 52.00 in 19 days with algo TB1_OC_QM_OB2_OS2_CB5_CS5_RV_AV_DB30
CIEN Gain: $ 1.9 Win %: 47.00 in 19 days with algo TB1_OC_QM_OB2_OS2_CB5_CS5_RV_AL_DB30
CIEN Gain: $ -10.58 Win %: 26.00 in 19 days with algo TB1_OC_QM_OB2_OS2_CB5_CS5_RV_QP_DB30
CIEN Gain: $ -6.64 Win %: 47.00 in 19 days with algo TB1_OC_QM_OB2_OS2_CB5_CS5_HM_TR_DB30
CIEN Gain: $ -2.16 Win %: 47.00 in 19 days with algo TB1_OC_QM_OB2_OS2_CB5_CS5_HM_AV_DB30
CIEN Gain: $ -10.41 Win %: 26.00 in 19 days with algo TB1_OC_QM_OB2_OS2_CB5_CS5_HM_QP_DB30
CIEN Gain: $ 0.62 Win %: 47.00 in 19 days with algo TB1_OC_QM_OB2_OS2_CB5_CS5_IT_QL_DB30
CIEN Gain: $ -8.36 Win %: 36.00 in 19 days with algo TB1_OC_QM_OB2_OS2_CB5_CS5_IT_QP_DB30
CIEN Gain: $ -5.37 Win %: 36.00 in 19 days with algo TB1_OC_QM_OB2_OS2_CB5_CS5_TR_IR5
CIEN Gain: $ -1.85 Win %: 47.00 in 19 days with algo TB1_OC_QM_OB2_OS2_CB5_CS5_TR_TS
CIEN Gain: $ -14.61 Win %: 26.00 in 19 days with algo TB1_OC_QM_OB2_OS2_CB5_CS5_TR_QP
CIEN Gain: $ -8.77 Win %: 36.00 in 19 days with algo TB1_OC_QM_OB2_OS2_CB5_CS5_QP_IR5
CIEN Gain: $ -4.53 Win %: 47.00 in 19 days with algo TB1_OC_QM_OB2_OS2_CB5_CS5_RV_TR
CIEN Gain: $ -1.43 Win %: 52.00 in 19 days with algo TB1_OC_QM_OB2_OS2_CB5_CS5_RV_AV
CIEN Gain: $ 1.77 Win %: 52.00 in 19 days with algo TB1_OC_QM_OB2_OS2_CB5_CS5_RV_AL
CIEN Gain: $ -11.79 Win %: 31.00 in 19 days with algo TB1_OC_QM_OB2_OS2_CB5_CS5_RV_QP
CIEN Gain: $ -4.89 Win %: 47.00 in 19 days with algo TB1_OC_QM_OB2_OS2_CB5_CS5_HM_TR
CIEN Gain: $ -6.22 Win %: 36.00 in 19 days with algo TB1_OC_QM_OB2_OS2_CB5_CS5_HM_AV
CIEN Gain: $ 0.39 Win %: 52.00 in 19 days with algo TB1_OC_QM_OB2_OS2_CB5_CS5_HM_AL
CIEN Gain: $ -9.18 Win %: 42.00 in 19 days with algo TB1_OC_QM_OB2_OS2_CB5_CS5_HM_QP
CIEN Gain: $ -0.02 Win %: 47.00 in 19 days with algo TB1_OC_QM_OB2_OS2_CB5_CS5_IT_QL
CIEN Gain: $ -7.24 Win %: 42.00 in 19 days with algo TB1_OC_QM_OB2_OS2_CB5_CS5_IT_QP
CIEN Gain: $ 0.47 Win %: 52.00 in 19 days with algo TB1_OC_QM_OB2_OS2_CB5_CS5_IT_TS
CIEN Gain: $ 3.35 Win %: 52.00 in 19 days with algo TB1_OC_QM_OB2_OS2_CB5_CS5_AO_AC
CIEN Gain: $ -3.29 Win %: 52.00 in 19 days with algo TB1_OC_QM_OB2_OS2_CB5_CS5_QP_PM
CIEN Gain: $ -3.6 Win %: 52.00 in 19 days with algo TB1_OC_QM_OB2_OS2_CB5_CS5_AV_TS
CIEN Gain: $ -0.34 Win %: 52.00 in 19 days with algo TB1_OC_QM_OB2_OS2_CB5_CS5_AL_TS
CIEN Gain: $ 0.42 Win %: 52.00 in 19 days with algo TB1_OC_QM_OB2_OS2_CB5_CS5_RV
CIEN Gain: $ 6.12 Win %: 57.00 in 19 days with algo TB1_OC_QM_OB2_OS2_CB5_CS5_IR5
CIEN Gain: $ -4.25 Win %: 42.00 in 19 days with algo TB1_OC_QM_OB2_OS2_CB5_CS5_TR
CIEN Gain: $ -1.43 Win %: 52.00 in 19 days with algo TB1_OC_QM_OB2_OS2_CB5_CS5_AV
CIEN Gain: $ 1.77 Win %: 52.00 in 19 days with algo TB1_OC_QM_OB2_OS2_CB5_CS5_AL
CIEN Gain: $ 1.0 Win %: 63.00 in 19 days with algo TB1_OC_QM_OB2_OS2_CB5_CS5_VI
CIEN Gain: $ -3.03 Win %: 31.00 in 19 days with algo TB1_OC_QM_OB2_OS2_CB5_CS5_LI
CIEN Gain: $ -7.24 Win %: 42.00 in 19 days with algo TB1_OC_QM_OB2_OS2_CB5_CS5_QP
CIEN Gain: $ 1.6 Win %: 52.00 in 19 days with algo TB1_OC_QM_OB2_OS2_CB5_CS5_HM
CIEN Gain: $ 3.41 Win %: 52.00 in 19 days with algo TB1_OC_QM_OB2_OS2_CB5_CS5_SS
CIEN Gain: $ 0.69 Win %: 47.00 in 19 days with algo TB1_OC_QM_OB2_OS2_CB5_CS5_QL
CIEN Gain: $ 1.24 Win %: 57.00 in 19 days with algo TB1_OC_QM_OB2_OS2_CB5_CS5_DB30
CIEN Gain: $ 3.35 Win %: 52.00 in 19 days with algo TB1_OC_QM_OB2_OS2_CB5_CS5_AO
CIEN Gain: $ 3.35 Win %: 52.00 in 19 days with algo TB1_OC_QM_OB2_OS2_CB5_CS5_AC
CIEN Gain: $ 2.38 Win %: 52.00 in 19 days with algo TB1_OC_QM_OB2_OS2_CB5_CS5_IT
CIEN Gain: $ -3.38 Win %: 63.00 in 19 days with algo TB1_OC_QM_OB2_OS2_CB5_CS5_PM
CIEN Gain: $ 0.93 Win %: 52.00 in 19 days with algo TB1_OC_QM_OB2_OS2_CB5_CS5_TS
CIEN Gain: $ -10.59 Win %: 21.00 in 19 days with algo TB5_HL_HI_QM_OB2_OS2_CB3_CS3_TR_QP_DB6
CIEN Gain: $ -6.74 Win %: 31.00 in 19 days with algo TB5_HL_HI_QM_OB2_OS2_CB3_CS3_RV_TR_DB6
CIEN Gain: $ -5.91 Win %: 42.00 in 19 days with algo TB5_HL_HI_QM_OB2_OS2_CB3_CS3_RV_AV_DB6
CIEN Gain: $ -10.12 Win %: 21.00 in 19 days with algo TB5_HL_HI_QM_OB2_OS2_CB3_CS3_RV_AL_DB6
CIEN Gain: $ -11.37 Win %: 21.00 in 19 days with algo TB5_HL_HI_QM_OB2_OS2_CB3_CS3_RV_QP_DB6
CIEN Gain: $ -7.35 Win %: 31.00 in 19 days with algo TB5_HL_HI_QM_OB2_OS2_CB3_CS3_HM_TR_DB6
CIEN Gain: $ -7.24 Win %: 36.00 in 19 days with algo TB5_HL_HI_QM_OB2_OS2_CB3_CS3_HM_AV_DB6
CIEN Gain: $ -10.26 Win %: 10.00 in 19 days with algo TB5_HL_HI_QM_OB2_OS2_CB3_CS3_HM_QP_DB6
CIEN Gain: $ -7.3 Win %: 31.00 in 19 days with algo TB5_HL_HI_QM_OB2_OS2_CB3_CS3_IT_QL_DB6
CIEN Gain: $ -11.84 Win %: 15.00 in 19 days with algo TB5_HL_HI_QM_OB2_OS2_CB3_CS3_IT_QP_DB6
CIEN Gain: $ -4.41 Win %: 31.00 in 19 days with algo TB5_HL_HI_QM_OB2_OS2_CB3_CS3_TR_IR1
CIEN Gain: $ -6.39 Win %: 36.00 in 19 days with algo TB5_HL_HI_QM_OB2_OS2_CB3_CS3_TR_TS
CIEN Gain: $ -10.63 Win %: 21.00 in 19 days with algo TB5_HL_HI_QM_OB2_OS2_CB3_CS3_TR_QP
CIEN Gain: $ -9.63 Win %: 21.00 in 19 days with algo TB5_HL_HI_QM_OB2_OS2_CB3_CS3_QP_IR1
CIEN Gain: $ -4.57 Win %: 36.00 in 19 days with algo TB5_HL_HI_QM_OB2_OS2_CB3_CS3_RV_TR
CIEN Gain: $ -4.1 Win %: 47.00 in 19 days with algo TB5_HL_HI_QM_OB2_OS2_CB3_CS3_RV_AV
CIEN Gain: $ -9.3 Win %: 26.00 in 19 days with algo TB5_HL_HI_QM_OB2_OS2_CB3_CS3_RV_AL
CIEN Gain: $ -11.94 Win %: 21.00 in 19 days with algo TB5_HL_HI_QM_OB2_OS2_CB3_CS3_RV_QP
CIEN Gain: $ -5.85 Win %: 26.00 in 19 days with algo TB5_HL_HI_QM_OB2_OS2_CB3_CS3_HM_TR
CIEN Gain: $ -6.49 Win %: 42.00 in 19 days with algo TB5_HL_HI_QM_OB2_OS2_CB3_CS3_HM_AV
CIEN Gain: $ -7.27 Win %: 31.00 in 19 days with algo TB5_HL_HI_QM_OB2_OS2_CB3_CS3_HM_AL
CIEN Gain: $ -11.22 Win %: 26.00 in 19 days with algo TB5_HL_HI_QM_OB2_OS2_CB3_CS3_HM_QP
CIEN Gain: $ -6.93 Win %: 31.00 in 19 days with algo TB5_HL_HI_QM_OB2_OS2_CB3_CS3_IT_QL
CIEN Gain: $ -10.61 Win %: 15.00 in 19 days with algo TB5_HL_HI_QM_OB2_OS2_CB3_CS3_IT_QP
CIEN Gain: $ -5.69 Win %: 42.00 in 19 days with algo TB5_HL_HI_QM_OB2_OS2_CB3_CS3_IT_TS
CIEN Gain: $ -36.15 Win %: 36.00 in 19 days with algo TB5_HL_HI_QM_OB2_OS2_CB3_CS3_AO_AC
CIEN Gain: $ 0.41 Win %: 63.00 in 19 days with algo TB5_HL_HI_QM_OB2_OS2_CB3_CS3_QP_PM
CIEN Gain: $ -5.19 Win %: 52.00 in 19 days with algo TB5_HL_HI_QM_OB2_OS2_CB3_CS3_AV_TS
CIEN Gain: $ -9.67 Win %: 31.00 in 19 days with algo TB5_HL_HI_QM_OB2_OS2_CB3_CS3_AL_TS
CIEN Gain: $ -0.68 Win %: 42.00 in 19 days with algo TB5_HL_HI_QM_OB2_OS2_CB3_CS3_RV
CIEN Gain: $ -1.43 Win %: 42.00 in 19 days with algo TB5_HL_HI_QM_OB2_OS2_CB3_CS3_IR1
CIEN Gain: $ -4.6 Win %: 31.00 in 19 days with algo TB5_HL_HI_QM_OB2_OS2_CB3_CS3_TR
CIEN Gain: $ -4.2 Win %: 47.00 in 19 days with algo TB5_HL_HI_QM_OB2_OS2_CB3_CS3_AV
CIEN Gain: $ -7.82 Win %: 31.00 in 19 days with algo TB5_HL_HI_QM_OB2_OS2_CB3_CS3_AL
CIEN Gain: $ -5.32 Win %: 31.00 in 19 days with algo TB5_HL_HI_QM_OB2_OS2_CB3_CS3_VI
CIEN Gain: $ -5.5 Win %: 26.00 in 19 days with algo TB5_HL_HI_QM_OB2_OS2_CB3_CS3_LI
CIEN Gain: $ -10.61 Win %: 15.00 in 19 days with algo TB5_HL_HI_QM_OB2_OS2_CB3_CS3_QP
CIEN Gain: $ -2.09 Win %: 36.00 in 19 days with algo TB5_HL_HI_QM_OB2_OS2_CB3_CS3_HM
CIEN Gain: $ -4.24 Win %: 36.00 in 19 days with algo TB5_HL_HI_QM_OB2_OS2_CB3_CS3_SS
CIEN Gain: $ -3.67 Win %: 31.00 in 19 days with algo TB5_HL_HI_QM_OB2_OS2_CB3_CS3_QL
CIEN Gain: $ -3.72 Win %: 36.00 in 19 days with algo TB5_HL_HI_QM_OB2_OS2_CB3_CS3_DB6
CIEN Gain: $ -0.85 Win %: 42.00 in 19 days with algo TB5_HL_HI_QM_OB2_OS2_CB3_CS3_AO
CIEN Gain: $ -6.01 Win %: 42.00 in 19 days with algo TB5_HL_HI_QM_OB2_OS2_CB3_CS3_AC
CIEN Gain: $ -5.02 Win %: 42.00 in 19 days with algo TB5_HL_HI_QM_OB2_OS2_CB3_CS3_IT
CIEN Gain: $ 0.08 Win %: 57.00 in 19 days with algo TB5_HL_HI_QM_OB2_OS2_CB3_CS3_PM
CIEN Gain: $ -5.23 Win %: 42.00 in 19 days with algo TB5_HL_HI_QM_OB2_OS2_CB3_CS3_TS
