CIEN Gain: $ 4.84 Win %: 61.00 in 21 days with algo TB3_HL_LO_QM_OB1_OS1_CB5_CS5
CIEN Gain: $ -7.18 Win %: 42.00 in 21 days with algo TB3_HL_LO_QM_OB1_OS1_CB5_CS5_TR_QP_DB10
CIEN Gain: $ -6.33 Win %: 42.00 in 21 days with algo TB3_HL_LO_QM_OB1_OS1_CB5_CS5_RV_TR_DB10
CIEN Gain: $ 0.5 Win %: 57.00 in 21 days with algo TB3_HL_LO_QM_OB1_OS1_CB5_CS5_RV_AV_DB10
CIEN Gain: $ -6.24 Win %: 33.00 in 21 days with algo TB3_HL_LO_QM_OB1_OS1_CB5_CS5_RV_AL_DB10
CIEN Gain: $ -10.52 Win %: 28.00 in 21 days with algo TB3_HL_LO_QM_OB1_OS1_CB5_CS5_RV_QP_DB10
CIEN Gain: $ -6.08 Win %: 38.00 in 21 days with algo TB3_HL_LO_QM_OB1_OS1_CB5_CS5_HM_TR_DB10
CIEN Gain: $ -2.33 Win %: 52.00 in 21 days with algo TB3_HL_LO_QM_OB1_OS1_CB5_CS5_HM_AV_DB10
CIEN Gain: $ -11.43 Win %: 38.00 in 21 days with algo TB3_HL_LO_QM_OB1_OS1_CB5_CS5_HM_QP_DB10
CIEN Gain: $ -244.41 Win %: 42.00 in 21 days with algo TB3_HL_LO_QM_OB1_OS1_CB5_CS5_IT_QL_DB10
CIEN Gain: $ -5.29 Win %: 47.00 in 21 days with algo TB3_HL_LO_QM_OB1_OS1_CB5_CS5_IT_QP_DB10
CIEN Gain: $ 4.29 Win %: 61.00 in 21 days with algo TB3_HL_LO_QM_OB1_OS1_CB5_CS5_TR_IR3
CIEN Gain: $ 4.56 Win %: 61.00 in 21 days with algo TB3_HL_LO_QM_OB1_OS1_CB5_CS5_TR_TS
CIEN Gain: $ -4.69 Win %: 47.00 in 21 days with algo TB3_HL_LO_QM_OB1_OS1_CB5_CS5_TR_QP
CIEN Gain: $ -1.7 Win %: 52.00 in 21 days with algo TB3_HL_LO_QM_OB1_OS1_CB5_CS5_QP_IR3
CIEN Gain: $ -5.34 Win %: 42.00 in 21 days with algo TB3_HL_LO_QM_OB1_OS1_CB5_CS5_RV_TR
CIEN Gain: $ -0.3 Win %: 52.00 in 21 days with algo TB3_HL_LO_QM_OB1_OS1_CB5_CS5_RV_AV
CIEN Gain: $ -1.94 Win %: 42.00 in 21 days with algo TB3_HL_LO_QM_OB1_OS1_CB5_CS5_RV_AL
CIEN Gain: $ -11.75 Win %: 38.00 in 21 days with algo TB3_HL_LO_QM_OB1_OS1_CB5_CS5_RV_QP
CIEN Gain: $ -5.8 Win %: 52.00 in 21 days with algo TB3_HL_LO_QM_OB1_OS1_CB5_CS5_HM_TR
CIEN Gain: $ -1.29 Win %: 52.00 in 21 days with algo TB3_HL_LO_QM_OB1_OS1_CB5_CS5_HM_AV
CIEN Gain: $ -3.78 Win %: 47.00 in 21 days with algo TB3_HL_LO_QM_OB1_OS1_CB5_CS5_HM_AL
CIEN Gain: $ -10.81 Win %: 38.00 in 21 days with algo TB3_HL_LO_QM_OB1_OS1_CB5_CS5_HM_QP
CIEN Gain: $ 0.51 Win %: 57.00 in 21 days with algo TB3_HL_LO_QM_OB1_OS1_CB5_CS5_IT_QL
CIEN Gain: $ -3.57 Win %: 47.00 in 21 days with algo TB3_HL_LO_QM_OB1_OS1_CB5_CS5_IT_QP
CIEN Gain: $ 4.48 Win %: 61.00 in 21 days with algo TB3_HL_LO_QM_OB1_OS1_CB5_CS5_IT_TS
CIEN Gain: $ -41.7 Win %: 23.00 in 21 days with algo TB3_HL_LO_QM_OB1_OS1_CB5_CS5_AO_AC
CIEN Gain: $ 0.82 Win %: 85.00 in 21 days with algo TB3_HL_LO_QM_OB1_OS1_CB5_CS5_QP_PM
CIEN Gain: $ 1.88 Win %: 57.00 in 21 days with algo TB3_HL_LO_QM_OB1_OS1_CB5_CS5_AV_TS
CIEN Gain: $ 2.15 Win %: 57.00 in 21 days with algo TB3_HL_LO_QM_OB1_OS1_CB5_CS5_AL_TS
CIEN Gain: $ -2.81 Win %: 42.00 in 21 days with algo TB3_HL_LO_QM_OB1_OS1_CB5_CS5_RV
CIEN Gain: $ 6.07 Win %: 61.00 in 21 days with algo TB3_HL_LO_QM_OB1_OS1_CB5_CS5_IR3
CIEN Gain: $ 4.67 Win %: 61.00 in 21 days with algo TB3_HL_LO_QM_OB1_OS1_CB5_CS5_TR
CIEN Gain: $ -1.32 Win %: 47.00 in 21 days with algo TB3_HL_LO_QM_OB1_OS1_CB5_CS5_AV
CIEN Gain: $ 4.31 Win %: 57.00 in 21 days with algo TB3_HL_LO_QM_OB1_OS1_CB5_CS5_AL
CIEN Gain: $ 1.81 Win %: 61.00 in 21 days with algo TB3_HL_LO_QM_OB1_OS1_CB5_CS5_VI
CIEN Gain: $ 1.03 Win %: 52.00 in 21 days with algo TB3_HL_LO_QM_OB1_OS1_CB5_CS5_LI
CIEN Gain: $ -5.75 Win %: 42.00 in 21 days with algo TB3_HL_LO_QM_OB1_OS1_CB5_CS5_QP
CIEN Gain: $ -1.4 Win %: 57.00 in 21 days with algo TB3_HL_LO_QM_OB1_OS1_CB5_CS5_HM
CIEN Gain: $ 4.91 Win %: 61.00 in 21 days with algo TB3_HL_LO_QM_OB1_OS1_CB5_CS5_SS
CIEN Gain: $ -1.77 Win %: 47.00 in 21 days with algo TB3_HL_LO_QM_OB1_OS1_CB5_CS5_QL
CIEN Gain: $ 0.14 Win %: 52.00 in 21 days with algo TB3_HL_LO_QM_OB1_OS1_CB5_CS5_DB10
CIEN Gain: $ 4.69 Win %: 57.00 in 21 days with algo TB3_HL_LO_QM_OB1_OS1_CB5_CS5_AO
CIEN Gain: $ -20.41 Win %: 38.00 in 21 days with algo TB3_HL_LO_QM_OB1_OS1_CB5_CS5_AC
CIEN Gain: $ 4.26 Win %: 61.00 in 21 days with algo TB3_HL_LO_QM_OB1_OS1_CB5_CS5_IT
CIEN Gain: $ 7.13 Win %: 85.00 in 21 days with algo TB3_HL_LO_QM_OB1_OS1_CB5_CS5_PM
CIEN Gain: $ 4.73 Win %: 61.00 in 21 days with algo TB3_HL_LO_QM_OB1_OS1_CB5_CS5_TS
CIEN Gain: $ -7.02 Win %: 42.00 in 21 days with algo TB3_HL_LO_QM_OB2_OS2_CB5_CS5_TR_QP_DB10
CIEN Gain: $ -6.33 Win %: 42.00 in 21 days with algo TB3_HL_LO_QM_OB2_OS2_CB5_CS5_RV_TR_DB10
CIEN Gain: $ 0.5 Win %: 57.00 in 21 days with algo TB3_HL_LO_QM_OB2_OS2_CB5_CS5_RV_AV_DB10
CIEN Gain: $ -6.24 Win %: 33.00 in 21 days with algo TB3_HL_LO_QM_OB2_OS2_CB5_CS5_RV_AL_DB10
CIEN Gain: $ -10.16 Win %: 33.00 in 21 days with algo TB3_HL_LO_QM_OB2_OS2_CB5_CS5_RV_QP_DB10
CIEN Gain: $ -6.08 Win %: 38.00 in 21 days with algo TB3_HL_LO_QM_OB2_OS2_CB5_CS5_HM_TR_DB10
CIEN Gain: $ -0.89 Win %: 57.00 in 21 days with algo TB3_HL_LO_QM_OB2_OS2_CB5_CS5_HM_AV_DB10
CIEN Gain: $ -11.43 Win %: 38.00 in 21 days with algo TB3_HL_LO_QM_OB2_OS2_CB5_CS5_HM_QP_DB10
CIEN Gain: $ -5.39 Win %: 42.00 in 21 days with algo TB3_HL_LO_QM_OB2_OS2_CB5_CS5_IT_QL_DB10
CIEN Gain: $ -5.29 Win %: 47.00 in 21 days with algo TB3_HL_LO_QM_OB2_OS2_CB5_CS5_IT_QP_DB10
CIEN Gain: $ 5.9 Win %: 61.00 in 21 days with algo TB3_HL_LO_QM_OB2_OS2_CB5_CS5_TR_IR3
CIEN Gain: $ 4.56 Win %: 61.00 in 21 days with algo TB3_HL_LO_QM_OB2_OS2_CB5_CS5_TR_TS
CIEN Gain: $ -4.27 Win %: 47.00 in 21 days with algo TB3_HL_LO_QM_OB2_OS2_CB5_CS5_TR_QP
CIEN Gain: $ -1.7 Win %: 52.00 in 21 days with algo TB3_HL_LO_QM_OB2_OS2_CB5_CS5_QP_IR3
CIEN Gain: $ -5.34 Win %: 42.00 in 21 days with algo TB3_HL_LO_QM_OB2_OS2_CB5_CS5_RV_TR
CIEN Gain: $ 2.9 Win %: 57.00 in 21 days with algo TB3_HL_LO_QM_OB2_OS2_CB5_CS5_RV_AV
CIEN Gain: $ -1.94 Win %: 42.00 in 21 days with algo TB3_HL_LO_QM_OB2_OS2_CB5_CS5_RV_AL
CIEN Gain: $ -11.82 Win %: 38.00 in 21 days with algo TB3_HL_LO_QM_OB2_OS2_CB5_CS5_RV_QP
CIEN Gain: $ -5.8 Win %: 52.00 in 21 days with algo TB3_HL_LO_QM_OB2_OS2_CB5_CS5_HM_TR
CIEN Gain: $ -1.29 Win %: 52.00 in 21 days with algo TB3_HL_LO_QM_OB2_OS2_CB5_CS5_HM_AV
CIEN Gain: $ -3.78 Win %: 47.00 in 21 days with algo TB3_HL_LO_QM_OB2_OS2_CB5_CS5_HM_AL
CIEN Gain: $ -10.81 Win %: 38.00 in 21 days with algo TB3_HL_LO_QM_OB2_OS2_CB5_CS5_HM_QP
CIEN Gain: $ 0.51 Win %: 57.00 in 21 days with algo TB3_HL_LO_QM_OB2_OS2_CB5_CS5_IT_QL
CIEN Gain: $ -3.57 Win %: 47.00 in 21 days with algo TB3_HL_LO_QM_OB2_OS2_CB5_CS5_IT_QP
CIEN Gain: $ 4.48 Win %: 61.00 in 21 days with algo TB3_HL_LO_QM_OB2_OS2_CB5_CS5_IT_TS
CIEN Gain: $ -41.7 Win %: 23.00 in 21 days with algo TB3_HL_LO_QM_OB2_OS2_CB5_CS5_AO_AC
CIEN Gain: $ 0.82 Win %: 85.00 in 21 days with algo TB3_HL_LO_QM_OB2_OS2_CB5_CS5_QP_PM
CIEN Gain: $ 1.88 Win %: 57.00 in 21 days with algo TB3_HL_LO_QM_OB2_OS2_CB5_CS5_AV_TS
CIEN Gain: $ 2.15 Win %: 57.00 in 21 days with algo TB3_HL_LO_QM_OB2_OS2_CB5_CS5_AL_TS
CIEN Gain: $ -2.81 Win %: 42.00 in 21 days with algo TB3_HL_LO_QM_OB2_OS2_CB5_CS5_RV
CIEN Gain: $ 6.07 Win %: 61.00 in 21 days with algo TB3_HL_LO_QM_OB2_OS2_CB5_CS5_IR3
CIEN Gain: $ 4.67 Win %: 61.00 in 21 days with algo TB3_HL_LO_QM_OB2_OS2_CB5_CS5_TR
CIEN Gain: $ 1.68 Win %: 52.00 in 21 days with algo TB3_HL_LO_QM_OB2_OS2_CB5_CS5_AV
CIEN Gain: $ 4.46 Win %: 57.00 in 21 days with algo TB3_HL_LO_QM_OB2_OS2_CB5_CS5_AL
CIEN Gain: $ 1.81 Win %: 61.00 in 21 days with algo TB3_HL_LO_QM_OB2_OS2_CB5_CS5_VI
CIEN Gain: $ 1.03 Win %: 52.00 in 21 days with algo TB3_HL_LO_QM_OB2_OS2_CB5_CS5_LI
CIEN Gain: $ -3.57 Win %: 47.00 in 21 days with algo TB3_HL_LO_QM_OB2_OS2_CB5_CS5_QP
CIEN Gain: $ -1.08 Win %: 57.00 in 21 days with algo TB3_HL_LO_QM_OB2_OS2_CB5_CS5_HM
CIEN Gain: $ 4.91 Win %: 61.00 in 21 days with algo TB3_HL_LO_QM_OB2_OS2_CB5_CS5_SS
CIEN Gain: $ 1.09 Win %: 57.00 in 21 days with algo TB3_HL_LO_QM_OB2_OS2_CB5_CS5_QL
CIEN Gain: $ 0.14 Win %: 52.00 in 21 days with algo TB3_HL_LO_QM_OB2_OS2_CB5_CS5_DB10
CIEN Gain: $ 4.69 Win %: 57.00 in 21 days with algo TB3_HL_LO_QM_OB2_OS2_CB5_CS5_AO
CIEN Gain: $ -20.41 Win %: 38.00 in 21 days with algo TB3_HL_LO_QM_OB2_OS2_CB5_CS5_AC
CIEN Gain: $ 4.26 Win %: 61.00 in 21 days with algo TB3_HL_LO_QM_OB2_OS2_CB5_CS5_IT
CIEN Gain: $ 7.13 Win %: 85.00 in 21 days with algo TB3_HL_LO_QM_OB2_OS2_CB5_CS5_PM
CIEN Gain: $ 4.73 Win %: 61.00 in 21 days with algo TB3_HL_LO_QM_OB2_OS2_CB5_CS5_TS
CIEN Gain: $ -3.68 Win %: 42.00 in 21 days with algo TB3_HL_LO_QM_OB3_OS3_CB5_CS5_TR_QP_DB10
CIEN Gain: $ -6.42 Win %: 57.00 in 21 days with algo TB3_HL_LO_QM_OB3_OS3_CB5_CS5_RV_TR_DB10
CIEN Gain: $ -0.44 Win %: 61.00 in 21 days with algo TB3_HL_LO_QM_OB3_OS3_CB5_CS5_RV_AV_DB10
CIEN Gain: $ -6.41 Win %: 42.00 in 21 days with algo TB3_HL_LO_QM_OB3_OS3_CB5_CS5_RV_AL_DB10
CIEN Gain: $ -5.41 Win %: 33.00 in 21 days with algo TB3_HL_LO_QM_OB3_OS3_CB5_CS5_RV_QP_DB10
CIEN Gain: $ -7.51 Win %: 38.00 in 21 days with algo TB3_HL_LO_QM_OB3_OS3_CB5_CS5_HM_TR_DB10
CIEN Gain: $ 3.91 Win %: 66.00 in 21 days with algo TB3_HL_LO_QM_OB3_OS3_CB5_CS5_HM_AV_DB10
CIEN Gain: $ -6.25 Win %: 33.00 in 21 days with algo TB3_HL_LO_QM_OB3_OS3_CB5_CS5_HM_QP_DB10
CIEN Gain: $ -7.43 Win %: 42.00 in 21 days with algo TB3_HL_LO_QM_OB3_OS3_CB5_CS5_IT_QL_DB10
CIEN Gain: $ -5.16 Win %: 42.00 in 21 days with algo TB3_HL_LO_QM_OB3_OS3_CB5_CS5_IT_QP_DB10
CIEN Gain: $ 2.32 Win %: 57.00 in 21 days with algo TB3_HL_LO_QM_OB3_OS3_CB5_CS5_TR_IR3
CIEN Gain: $ 2.85 Win %: 61.00 in 21 days with algo TB3_HL_LO_QM_OB3_OS3_CB5_CS5_TR_TS
CIEN Gain: $ -0.96 Win %: 57.00 in 21 days with algo TB3_HL_LO_QM_OB3_OS3_CB5_CS5_TR_QP
CIEN Gain: $ -3.14 Win %: 47.00 in 21 days with algo TB3_HL_LO_QM_OB3_OS3_CB5_CS5_QP_IR3
CIEN Gain: $ -2.95 Win %: 47.00 in 21 days with algo TB3_HL_LO_QM_OB3_OS3_CB5_CS5_RV_TR
CIEN Gain: $ 1.08 Win %: 57.00 in 21 days with algo TB3_HL_LO_QM_OB3_OS3_CB5_CS5_RV_AV
CIEN Gain: $ -2.74 Win %: 47.00 in 21 days with algo TB3_HL_LO_QM_OB3_OS3_CB5_CS5_RV_AL
CIEN Gain: $ -6.62 Win %: 28.00 in 21 days with algo TB3_HL_LO_QM_OB3_OS3_CB5_CS5_RV_QP
CIEN Gain: $ -4.32 Win %: 52.00 in 21 days with algo TB3_HL_LO_QM_OB3_OS3_CB5_CS5_HM_TR
CIEN Gain: $ 1.56 Win %: 52.00 in 21 days with algo TB3_HL_LO_QM_OB3_OS3_CB5_CS5_HM_AV
CIEN Gain: $ 0.89 Win %: 57.00 in 21 days with algo TB3_HL_LO_QM_OB3_OS3_CB5_CS5_HM_AL
CIEN Gain: $ -6.4 Win %: 28.00 in 21 days with algo TB3_HL_LO_QM_OB3_OS3_CB5_CS5_HM_QP
CIEN Gain: $ -3.81 Win %: 52.00 in 21 days with algo TB3_HL_LO_QM_OB3_OS3_CB5_CS5_IT_QL
CIEN Gain: $ -4.05 Win %: 47.00 in 21 days with algo TB3_HL_LO_QM_OB3_OS3_CB5_CS5_IT_QP
CIEN Gain: $ 0.61 Win %: 57.00 in 21 days with algo TB3_HL_LO_QM_OB3_OS3_CB5_CS5_IT_TS
CIEN Gain: $ -42.35 Win %: 23.00 in 21 days with algo TB3_HL_LO_QM_OB3_OS3_CB5_CS5_AO_AC
CIEN Gain: $ -0.02 Win %: 90.00 in 21 days with algo TB3_HL_LO_QM_OB3_OS3_CB5_CS5_QP_PM
CIEN Gain: $ -4.79 Win %: 47.00 in 21 days with algo TB3_HL_LO_QM_OB3_OS3_CB5_CS5_AV_TS
CIEN Gain: $ 0.38 Win %: 57.00 in 21 days with algo TB3_HL_LO_QM_OB3_OS3_CB5_CS5_AL_TS
CIEN Gain: $ -1.72 Win %: 42.00 in 21 days with algo TB3_HL_LO_QM_OB3_OS3_CB5_CS5_RV
CIEN Gain: $ 2.49 Win %: 57.00 in 21 days with algo TB3_HL_LO_QM_OB3_OS3_CB5_CS5_IR3
CIEN Gain: $ 3.09 Win %: 61.00 in 21 days with algo TB3_HL_LO_QM_OB3_OS3_CB5_CS5_TR
CIEN Gain: $ -2.07 Win %: 47.00 in 21 days with algo TB3_HL_LO_QM_OB3_OS3_CB5_CS5_AV
CIEN Gain: $ 2.26 Win %: 57.00 in 21 days with algo TB3_HL_LO_QM_OB3_OS3_CB5_CS5_AL
CIEN Gain: $ 1.59 Win %: 42.00 in 21 days with algo TB3_HL_LO_QM_OB3_OS3_CB5_CS5_VI
CIEN Gain: $ 2.28 Win %: 61.00 in 21 days with algo TB3_HL_LO_QM_OB3_OS3_CB5_CS5_LI
CIEN Gain: $ -4.05 Win %: 47.00 in 21 days with algo TB3_HL_LO_QM_OB3_OS3_CB5_CS5_QP
CIEN Gain: $ 1.02 Win %: 57.00 in 21 days with algo TB3_HL_LO_QM_OB3_OS3_CB5_CS5_HM
CIEN Gain: $ 2.75 Win %: 61.00 in 21 days with algo TB3_HL_LO_QM_OB3_OS3_CB5_CS5_SS
CIEN Gain: $ -1.07 Win %: 57.00 in 21 days with algo TB3_HL_LO_QM_OB3_OS3_CB5_CS5_QL
CIEN Gain: $ -1.39 Win %: 52.00 in 21 days with algo TB3_HL_LO_QM_OB3_OS3_CB5_CS5_DB10
CIEN Gain: $ 6.44 Win %: 66.00 in 21 days with algo TB3_HL_LO_QM_OB3_OS3_CB5_CS5_AO
CIEN Gain: $ 0.73 Win %: 42.00 in 21 days with algo TB3_HL_LO_QM_OB3_OS3_CB5_CS5_AC
CIEN Gain: $ .0 Win %: 57.00 in 21 days with algo TB3_HL_LO_QM_OB3_OS3_CB5_CS5_IT
CIEN Gain: $ 6.15 Win %: 90.00 in 21 days with algo TB3_HL_LO_QM_OB3_OS3_CB5_CS5_PM
CIEN Gain: $ 3.02 Win %: 61.00 in 21 days with algo TB3_HL_LO_QM_OB3_OS3_CB5_CS5_TS
CIEN Gain: $ -12.9 Win %: 28.00 in 21 days with algo TB1_OC_QM_OB1_OS1_CB5_CS5_TR_QP_DB30
CIEN Gain: $ -6.31 Win %: 47.00 in 21 days with algo TB1_OC_QM_OB1_OS1_CB5_CS5_RV_TR_DB30
CIEN Gain: $ -2.66 Win %: 47.00 in 21 days with algo TB1_OC_QM_OB1_OS1_CB5_CS5_RV_AV_DB30
CIEN Gain: $ 1.14 Win %: 47.00 in 21 days with algo TB1_OC_QM_OB1_OS1_CB5_CS5_RV_AL_DB30
CIEN Gain: $ -8.45 Win %: 28.00 in 21 days with algo TB1_OC_QM_OB1_OS1_CB5_CS5_RV_QP_DB30
CIEN Gain: $ -8.16 Win %: 42.00 in 21 days with algo TB1_OC_QM_OB1_OS1_CB5_CS5_HM_TR_DB30
CIEN Gain: $ -1.74 Win %: 47.00 in 21 days with algo TB1_OC_QM_OB1_OS1_CB5_CS5_HM_AV_DB30
CIEN Gain: $ -11.32 Win %: 23.00 in 21 days with algo TB1_OC_QM_OB1_OS1_CB5_CS5_HM_QP_DB30
CIEN Gain: $ -0.89 Win %: 42.00 in 21 days with algo TB1_OC_QM_OB1_OS1_CB5_CS5_IT_QL_DB30
CIEN Gain: $ -10.24 Win %: 33.00 in 21 days with algo TB1_OC_QM_OB1_OS1_CB5_CS5_IT_QP_DB30
CIEN Gain: $ -6.05 Win %: 33.00 in 21 days with algo TB1_OC_QM_OB1_OS1_CB5_CS5_TR_IR5
CIEN Gain: $ -3.06 Win %: 42.00 in 21 days with algo TB1_OC_QM_OB1_OS1_CB5_CS5_TR_TS
CIEN Gain: $ -16.54 Win %: 23.00 in 21 days with algo TB1_OC_QM_OB1_OS1_CB5_CS5_TR_QP
CIEN Gain: $ -11.3 Win %: 38.00 in 21 days with algo TB1_OC_QM_OB1_OS1_CB5_CS5_QP_IR5
CIEN Gain: $ -4.13 Win %: 47.00 in 21 days with algo TB1_OC_QM_OB1_OS1_CB5_CS5_RV_TR
CIEN Gain: $ -4.52 Win %: 47.00 in 21 days with algo TB1_OC_QM_OB1_OS1_CB5_CS5_RV_AV
CIEN Gain: $ 1.06 Win %: 52.00 in 21 days with algo TB1_OC_QM_OB1_OS1_CB5_CS5_RV_AL
CIEN Gain: $ -11.5 Win %: 33.00 in 21 days with algo TB1_OC_QM_OB1_OS1_CB5_CS5_RV_QP
CIEN Gain: $ -6.36 Win %: 42.00 in 21 days with algo TB1_OC_QM_OB1_OS1_CB5_CS5_HM_TR
CIEN Gain: $ -2.06 Win %: 52.00 in 21 days with algo TB1_OC_QM_OB1_OS1_CB5_CS5_HM_AV
CIEN Gain: $ 0.89 Win %: 52.00 in 21 days with algo TB1_OC_QM_OB1_OS1_CB5_CS5_HM_AL
CIEN Gain: $ -10.14 Win %: 38.00 in 21 days with algo TB1_OC_QM_OB1_OS1_CB5_CS5_HM_QP
CIEN Gain: $ -2.63 Win %: 38.00 in 21 days with algo TB1_OC_QM_OB1_OS1_CB5_CS5_IT_QL
CIEN Gain: $ -9.17 Win %: 38.00 in 21 days with algo TB1_OC_QM_OB1_OS1_CB5_CS5_IT_QP
CIEN Gain: $ -0.74 Win %: 47.00 in 21 days with algo TB1_OC_QM_OB1_OS1_CB5_CS5_IT_TS
CIEN Gain: $ 2.14 Win %: 47.00 in 21 days with algo TB1_OC_QM_OB1_OS1_CB5_CS5_AO_AC
CIEN Gain: $ -3.11 Win %: 52.00 in 21 days with algo TB1_OC_QM_OB1_OS1_CB5_CS5_QP_PM
CIEN Gain: $ -6.69 Win %: 47.00 in 21 days with algo TB1_OC_QM_OB1_OS1_CB5_CS5_AV_TS
CIEN Gain: $ -1.05 Win %: 52.00 in 21 days with algo TB1_OC_QM_OB1_OS1_CB5_CS5_AL_TS
CIEN Gain: $ 1.71 Win %: 52.00 in 21 days with algo TB1_OC_QM_OB1_OS1_CB5_CS5_RV
CIEN Gain: $ 5.13 Win %: 52.00 in 21 days with algo TB1_OC_QM_OB1_OS1_CB5_CS5_IR5
CIEN Gain: $ -5.46 Win %: 38.00 in 21 days with algo TB1_OC_QM_OB1_OS1_CB5_CS5_TR
CIEN Gain: $ -4.52 Win %: 47.00 in 21 days with algo TB1_OC_QM_OB1_OS1_CB5_CS5_AV
CIEN Gain: $ 1.06 Win %: 52.00 in 21 days with algo TB1_OC_QM_OB1_OS1_CB5_CS5_AL
CIEN Gain: $ 0.31 Win %: 57.00 in 21 days with algo TB1_OC_QM_OB1_OS1_CB5_CS5_VI
CIEN Gain: $ -2.81 Win %: 38.00 in 21 days with algo TB1_OC_QM_OB1_OS1_CB5_CS5_LI
CIEN Gain: $ -9.17 Win %: 38.00 in 21 days with algo TB1_OC_QM_OB1_OS1_CB5_CS5_QP
CIEN Gain: $ 1.33 Win %: 52.00 in 21 days with algo TB1_OC_QM_OB1_OS1_CB5_CS5_HM
CIEN Gain: $ 2.43 Win %: 47.00 in 21 days with algo TB1_OC_QM_OB1_OS1_CB5_CS5_SS
CIEN Gain: $ -0.77 Win %: 42.00 in 21 days with algo TB1_OC_QM_OB1_OS1_CB5_CS5_QL
CIEN Gain: $ -0.02 Win %: 52.00 in 21 days with algo TB1_OC_QM_OB1_OS1_CB5_CS5_DB30
CIEN Gain: $ 2.14 Win %: 47.00 in 21 days with algo TB1_OC_QM_OB1_OS1_CB5_CS5_AO
CIEN Gain: $ 2.14 Win %: 47.00 in 21 days with algo TB1_OC_QM_OB1_OS1_CB5_CS5_AC
CIEN Gain: $ 0.78 Win %: 42.00 in 21 days with algo TB1_OC_QM_OB1_OS1_CB5_CS5_IT
CIEN Gain: $ -4.09 Win %: 57.00 in 21 days with algo TB1_OC_QM_OB1_OS1_CB5_CS5_PM
CIEN Gain: $ -0.28 Win %: 47.00 in 21 days with algo TB1_OC_QM_OB1_OS1_CB5_CS5_TS
CIEN Gain: $ -12.65 Win %: 19.00 in 21 days with algo TB5_HL_HI_QM_OB2_OS2_CB3_CS3_TR_QP_DB6
CIEN Gain: $ -7.48 Win %: 33.00 in 21 days with algo TB5_HL_HI_QM_OB2_OS2_CB3_CS3_RV_TR_DB6
CIEN Gain: $ -4.51 Win %: 42.00 in 21 days with algo TB5_HL_HI_QM_OB2_OS2_CB3_CS3_RV_AV_DB6
CIEN Gain: $ -8.27 Win %: 28.00 in 21 days with algo TB5_HL_HI_QM_OB2_OS2_CB3_CS3_RV_AL_DB6
CIEN Gain: $ -12.96 Win %: 23.00 in 21 days with algo TB5_HL_HI_QM_OB2_OS2_CB3_CS3_RV_QP_DB6
CIEN Gain: $ -8.53 Win %: 33.00 in 21 days with algo TB5_HL_HI_QM_OB2_OS2_CB3_CS3_HM_TR_DB6
CIEN Gain: $ -8.3 Win %: 33.00 in 21 days with algo TB5_HL_HI_QM_OB2_OS2_CB3_CS3_HM_AV_DB6
CIEN Gain: $ -12.5 Win %: 9.00 in 21 days with algo TB5_HL_HI_QM_OB2_OS2_CB3_CS3_HM_QP_DB6
CIEN Gain: $ -8.46 Win %: 33.00 in 21 days with algo TB5_HL_HI_QM_OB2_OS2_CB3_CS3_IT_QL_DB6
CIEN Gain: $ -12.12 Win %: 14.00 in 21 days with algo TB5_HL_HI_QM_OB2_OS2_CB3_CS3_IT_QP_DB6
CIEN Gain: $ -6.37 Win %: 28.00 in 21 days with algo TB5_HL_HI_QM_OB2_OS2_CB3_CS3_TR_IR1
CIEN Gain: $ -8.35 Win %: 33.00 in 21 days with algo TB5_HL_HI_QM_OB2_OS2_CB3_CS3_TR_TS
CIEN Gain: $ -13.61 Win %: 19.00 in 21 days with algo TB5_HL_HI_QM_OB2_OS2_CB3_CS3_TR_QP
CIEN Gain: $ -12.73 Win %: 19.00 in 21 days with algo TB5_HL_HI_QM_OB2_OS2_CB3_CS3_QP_IR1
CIEN Gain: $ -6.32 Win %: 33.00 in 21 days with algo TB5_HL_HI_QM_OB2_OS2_CB3_CS3_RV_TR
CIEN Gain: $ -5.56 Win %: 42.00 in 21 days with algo TB5_HL_HI_QM_OB2_OS2_CB3_CS3_RV_AV
CIEN Gain: $ -9.22 Win %: 28.00 in 21 days with algo TB5_HL_HI_QM_OB2_OS2_CB3_CS3_RV_AL
CIEN Gain: $ -15.0 Win %: 19.00 in 21 days with algo TB5_HL_HI_QM_OB2_OS2_CB3_CS3_RV_QP
CIEN Gain: $ -8.04 Win %: 23.00 in 21 days with algo TB5_HL_HI_QM_OB2_OS2_CB3_CS3_HM_TR
CIEN Gain: $ -6.77 Win %: 38.00 in 21 days with algo TB5_HL_HI_QM_OB2_OS2_CB3_CS3_HM_AV
CIEN Gain: $ -7.96 Win %: 33.00 in 21 days with algo TB5_HL_HI_QM_OB2_OS2_CB3_CS3_HM_AL
CIEN Gain: $ -14.34 Win %: 23.00 in 21 days with algo TB5_HL_HI_QM_OB2_OS2_CB3_CS3_HM_QP
CIEN Gain: $ -8.94 Win %: 33.00 in 21 days with algo TB5_HL_HI_QM_OB2_OS2_CB3_CS3_IT_QL
CIEN Gain: $ -13.63 Win %: 14.00 in 21 days with algo TB5_HL_HI_QM_OB2_OS2_CB3_CS3_IT_QP
CIEN Gain: $ -7.77 Win %: 38.00 in 21 days with algo TB5_HL_HI_QM_OB2_OS2_CB3_CS3_IT_TS
CIEN Gain: $ -39.06 Win %: 33.00 in 21 days with algo TB5_HL_HI_QM_OB2_OS2_CB3_CS3_AO_AC
CIEN Gain: $ -0.46 Win %: 57.00 in 21 days with algo TB5_HL_HI_QM_OB2_OS2_CB3_CS3_QP_PM
CIEN Gain: $ -6.65 Win %: 47.00 in 21 days with algo TB5_HL_HI_QM_OB2_OS2_CB3_CS3_AV_TS
CIEN Gain: $ -10.13 Win %: 33.00 in 21 days with algo TB5_HL_HI_QM_OB2_OS2_CB3_CS3_AL_TS
CIEN Gain: $ -2.77 Win %: 38.00 in 21 days with algo TB5_HL_HI_QM_OB2_OS2_CB3_CS3_RV
CIEN Gain: $ -3.51 Win %: 38.00 in 21 days with algo TB5_HL_HI_QM_OB2_OS2_CB3_CS3_IR1
CIEN Gain: $ -6.56 Win %: 28.00 in 21 days with algo TB5_HL_HI_QM_OB2_OS2_CB3_CS3_TR
CIEN Gain: $ -5.66 Win %: 42.00 in 21 days with algo TB5_HL_HI_QM_OB2_OS2_CB3_CS3_AV
CIEN Gain: $ -8.28 Win %: 33.00 in 21 days with algo TB5_HL_HI_QM_OB2_OS2_CB3_CS3_AL
CIEN Gain: $ -7.18 Win %: 28.00 in 21 days with algo TB5_HL_HI_QM_OB2_OS2_CB3_CS3_VI
CIEN Gain: $ -5.87 Win %: 28.00 in 21 days with algo TB5_HL_HI_QM_OB2_OS2_CB3_CS3_LI
CIEN Gain: $ -13.63 Win %: 14.00 in 21 days with algo TB5_HL_HI_QM_OB2_OS2_CB3_CS3_QP
CIEN Gain: $ -4.4 Win %: 33.00 in 21 days with algo TB5_HL_HI_QM_OB2_OS2_CB3_CS3_HM
CIEN Gain: $ -3.72 Win %: 38.00 in 21 days with algo TB5_HL_HI_QM_OB2_OS2_CB3_CS3_SS
CIEN Gain: $ -5.95 Win %: 28.00 in 21 days with algo TB5_HL_HI_QM_OB2_OS2_CB3_CS3_QL
CIEN Gain: $ -4.79 Win %: 38.00 in 21 days with algo TB5_HL_HI_QM_OB2_OS2_CB3_CS3_DB6
CIEN Gain: $ -2.77 Win %: 38.00 in 21 days with algo TB5_HL_HI_QM_OB2_OS2_CB3_CS3_AO
CIEN Gain: $ -7.51 Win %: 38.00 in 21 days with algo TB5_HL_HI_QM_OB2_OS2_CB3_CS3_AC
CIEN Gain: $ -7.1 Win %: 38.00 in 21 days with algo TB5_HL_HI_QM_OB2_OS2_CB3_CS3_IT
CIEN Gain: $ 0.14 Win %: 57.00 in 21 days with algo TB5_HL_HI_QM_OB2_OS2_CB3_CS3_PM
CIEN Gain: $ -7.31 Win %: 38.00 in 21 days with algo TB5_HL_HI_QM_OB2_OS2_CB3_CS3_TS
